--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app.js",
+    "start" : "forever start -w -o ./logs/out.log -e ./logs/err.log app.js",
+    "stop" : "forever stop app.js",
+    "restart": "forever restart app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -22,6 +25,7 @@
     "os": "^0.1.2",
     "path": "^0.12.7",
     "unorm": "^1.6.0",
+    "winston": "^3.11.0",
     "youtube-dl-exec": "^2.5.5",
     "ytdl-core": "^4.11.5"
   }
