--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,35 @@
-node_modules
-logs
-youtubeDL-win32-x64
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
+# Logs
+logs/
+*.log
+*.log.*
+
+# Build / Dist
+dist/
+build/
+out/
+
+# Electron build output
+youtubeDL-win32-x64/
+
+# Temp
+*.tmp
+*.temp
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+
+# Youtube 쿠키 파일 (보안상 반드시 무시)
+cookies/youtube.txt
